@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that settings wouldn't be preserved if they were falsey
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.4
 Date: 2021-09-02
